--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ EX3_Server/.vs/EX3_Server/v16/.suo
 EX3_Server/EX3_Server/Debug/vc142.idb
 *.db
 EX3_Server/.vs/EX3_Server/v16/.suo
+EX3_Server/.vs
+EX3_Server/.vs/EX3_Server/v16/Browse.VC.db
