--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,6 @@ EX3_Server/.vs/EX3_Server/v17/.suo
 *.db-wal
 *.log
 *.db
-EX3_Server/.vs/EX3_Server/v16/.suo
-EX3_Server/.vs/EX3_Server/v16/Browse.VC.db
 EX3_Server/.vs/EX3_Server/v16/ipch/AutoPCH/5944215348c5e11b/SERVERUTILITIES.ipch
 EX3_Server/EX3_Server/Debug/EX3_Server.exe.recipe
 EX3_Server/EX3_Server/Debug/EX3_Server.ilk
@@ -22,6 +20,6 @@ EX3_Server/.vs/EX3_Server/v16/Browse.VC.db
 EX3_Server/.vs/EX3_Server/v16/.suo
 EX3_Server/EX3_Server/Debug/vc142.idb
 *.db
-EX3_Server/.vs/EX3_Server/v16/.suo
 .EX3_Server/.vs
-EX3_Server/.vs/EX3_Server/v16/Browse.VC.db
+/.vs
+ .vs/EX3_Server/v16/ipch/AutoPCH/17e6ab0547ae644f/
