Need to change put delete and trace

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ EX3_Server/EX3_Server/Debug/vc142.idb
 .EX3_Server/.vs
 /.vs
  .vs/EX3_Server/v16/ipch/AutoPCH/17e6ab0547ae644f/
+EX3_Server/.vs/EX3_Server/v16/.suo
+EX3_Server/.vs/EX3_Server/v16/ipch/AutoPCH/a69e21e3cd998301/TCPSERVERCPP.ipch
