--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ EX3_Server/EX3_Server/Debug/vc142.idb
  .vs/EX3_Server/v16/ipch/AutoPCH/17e6ab0547ae644f/
 EX3_Server/.vs/EX3_Server/v16/.suo
 EX3_Server/.vs/EX3_Server/v16/ipch/AutoPCH/a69e21e3cd998301/TCPSERVERCPP.ipch
+EX3_Server/.vs/EX3_Server/v16/.suo
